# pipedog

./: .gitignore  LICENSE  Pipedog - User Guide.md  README.md  pipedog.spec  pipedog_launcher.py  pyproject.toml
pipedog/: gui.py  history.py  main.py  output.py  profiler.py  reporter.py  scanner.py  schema.py
sample_data/: orders.csv  orders.xlsx
